--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,7 @@
-altair==5.0.1
-asttokens==2.2.1
-attrs==23.1.0
-backcall==0.2.0
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-comm==0.1.3
-contourpy==1.1.0
-cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-docopt==0.6.2
-et-xmlfile==1.1.0
-executing==1.2.0
-fonttools==4.41.0
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.1
-google-api-python-client==2.93.0
-google-auth==2.22.0
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
-googleapis-common-protos==1.59.1
-httplib2==0.22.0
-idna==3.4
-importlib-metadata==6.7.0
-ipykernel==6.22.0
-ipython==8.11.0
-jedi==0.18.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-kiwisolver==1.4.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+altair
+streamlit
+plotly-express==0.4.1
+openpyxl==3.0.7
+pandas==1.3.0
 matplotlib==3.7.2
 matplotlib-inline==0.1.6
-mdurl==0.1.2
-nest-asyncio==1.5.6
-numpy==1.24.2
-oauthlib==3.2.2
-openpyxl==3.1.2
-packaging==23.0
-pandas==1.5.3
-parso==0.8.3
-patsy==0.5.3
-pickleshare==0.7.5
-Pillow==9.5.0
-pipreqs==0.4.13
-platformdirs==3.2.0
-plotly==5.15.0
-plotly-express==0.4.1
-prompt-toolkit==3.0.38
-protobuf==4.23.3
-psutil==5.9.4
-pure-eval==0.2.2
-pyarrow==12.0.1
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pydeck==0.8.1b0
-Pygments==2.14.0
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-pytz==2023.2
-pytz-deprecation-shim==0.1.0.post0
-pywin32==306
-pyzmq==25.0.2
-requests==2.31.0
-requests-oauthlib==1.3.1
-rich==13.4.2
-rsa==4.9
-scipy==1.10.1
-six==1.16.0
-smmap==5.0.0
-stack-data==0.6.2
-statsmodels==0.14.0
-streamlit==1.23.1
-tenacity==8.2.2
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-traitlets==5.9.0
-typing_extensions==4.6.3
-tzdata==2023.3
-tzlocal==4.3.1
-uritemplate==4.1.1
-urllib3==1.26.16
-validators==0.20.0
-watchdog==3.0.0
-wcwidth==0.2.6
-xlwings==0.30.9
-yarg==0.1.9
-zipp==3.15.0
